Fix alignment of reviews

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -14,3 +14,7 @@
   display: flex;
   justify-content: center;
 }
+
+.sectionAlt {
+  background-color: var(--ifm-color-emphasis-200);
+}
