--- a/src/components/HomepageReviews/styles.module.css
+++ b/src/components/HomepageReviews/styles.module.css
@@ -13,3 +13,7 @@
   display: flex;
   justify-content: center;
 }
+
+.cardContent {
+  font-size: 1.2em;
+}
